# Lattice

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  SPEC.md
DESIGN/: SPEC.md  lattice_main_screen_login_and_connected.html  lattice_settings_screen.html
crates/lattice-client/: Cargo.toml
crates/lattice-client/src/: cli.rs  crypto.rs  dynamic.rs  lib.rs  main.rs  mesh.rs  mesh_session.rs  netcfg.rs  network_id.rs  peers.rs  punch.rs  relay.rs  run.rs  session.rs  signaling.rs  stun.rs  transport.rs
crates/lattice-client/src/tap/: mod.rs  registry.rs  win32.rs
crates/lattice-client/src/transport/: obfs.rs  quic.rs  quic_tls.rs  selector.rs
crates/lattice-proto/: Cargo.toml
crates/lattice-proto/src/: control.rs  framing.rs  ids.rs  lib.rs  mesh.rs  relay.rs
crates/lattice-server/: Cargo.toml
crates/lattice-server/src/: control.rs  http.rs  lib.rs  main.rs  mesh_control.rs  presence.rs  registry.rs  relay.rs  rooms.rs  web.rs
crates/lattice-server/tests/: mesh.rs  registry.rs  rendezvous.rs
gui/: package-lock.json  svelte.config.js
gui/src/: app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/resources/tap/: README.md
gui/src-tauri/src/: conn.rs  elevate.rs  lib.rs  logbuf.rs  settings.rs  tap_setup.rs
gui/src/lib/: bridge.ts  i18n.ts  stores.ts  theme.ts  types.ts
gui/src/lib/components/: ConnectedScreen.svelte  ContextMenu.svelte  Icon.svelte  LoginScreen.svelte  PeerProperties.svelte  PeerRow.svelte  RoomDialog.svelte  RoomsScreen.svelte  SettingsScreen.svelte  Toggle.svelte
gui/src/lib/styles/: app.css
gui/src/routes/: +page.svelte
