[package]
name = "lattice-proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# `std` включает модуль `framing` (length-delimited JSON поверх std::io).
# По умолчанию крейт no_std + alloc — чистый serde, без платформенного.
std = []

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
